# dummy-pip-package

./: README.md  pyproject.toml
dummy_pip_package/: main.py
